--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
         <nav class="nav">
             <ul>
-                <li class="list-element"><a class="link" href=dodaj_zlecenie.html>Dodaj Zlecenie</a></li>
+                <li class="list-element"><a class="link" href=make_order.html>Dodaj Zlecenie</a></li>
                 <li class="list-element">Znajdź Zlecenie</li>
                 <li class="list-element">Wypierdalaj!</li>
             </ul>
